--- a/apps/docs/content/docs/guides/core-concepts/customers.mdx
+++ b/apps/docs/content/docs/guides/core-concepts/customers.mdx
@@ -5,10 +5,10 @@ description: 'Learn about the Customer entity - user accounts, guest checkouts, 
 
 import { Callout } from 'fumadocs-ui/components/callout';
 
-A [`Customer`](/docs/reference/typescript-api/entities/customer/) is a person who can buy from your shop. A customer can have one or more
-[`Addresses`](/docs/reference/typescript-api/entities/address/), which are used for shipping and billing.
+A `Customer` is a person who can buy from your shop. A customer can have one or more
+`Addresses`, which are used for shipping and billing.
 
-If a customer has registered an account, they will have an associated [`User`](/docs/reference/typescript-api/entities/user/). The user
+If a customer has registered an account, they will have an associated `User`. The user
 entity is used for authentication and authorization. **Guest checkouts** are also possible, in which case a customer will not have a user.
 
 <Callout type="info">
@@ -18,7 +18,7 @@ customers and users.
 
 
 
-Customers can be organized into [`CustomerGroups`](/docs/reference/typescript-api/entities/customer-group/). These groups can be used in
+Customers can be organized into `CustomerGroups`. These groups can be used in
 logic relating to promotions, shipping rules, payment rules etc. For example, you could create a "VIP" customer group and then create
 a promotion which grants members of this group free shipping. Or a "B2B" group which is used in a custom tax calculator to
 apply a different tax rate to B2B customers.
