--- a/apps/docs/content/docs/guides/core-concepts/products.mdx
+++ b/apps/docs/content/docs/guides/core-concepts/products.mdx
@@ -5,7 +5,7 @@ description: "Understanding products and variants in Deenruv"
 
 import { Callout } from 'fumadocs-ui/components/callout';
 
-Your catalog is composed of [`Products`](/docs/reference/typescript-api/entities/product) and [`ProductVariants`](/docs/reference/typescript-api/entities/product-variant).
+Your catalog is composed of `Products` and `ProductVariants`.
 A `Product` always has _at least one_ `ProductVariant`. You can think of the product as a "container" which includes a name, description, and images that apply to all of
 its variants.
 
@@ -14,8 +14,8 @@ Here's a visual example, in which we have a "Hoodie" product which is available 
 
 
 
-Multiple variants are made possible by adding one or more [`ProductOptionGroups`](/docs/reference/typescript-api/entities/product-option-group) to
-the product. These option groups then define the available [`ProductOptions`](/docs/reference/typescript-api/entities/product-option)
+Multiple variants are made possible by adding one or more `ProductOptionGroups` to
+the product. These option groups then define the available `ProductOptions`
 
 If we were to add a new option group to the example above for "Color", with 2 options, "Black" and "White", then in total
 we would be able to define up to 6 variants:
@@ -36,15 +36,15 @@ It is the `ProductVariant` that contains the SKU ("stock keeping unit", or produ
 
 The `ProductVariant` entity contains the price and stock information for a product. Since a given product variant can have more
 than one price, and more than one stock level (in the case of multiple warehouses), the `ProductVariant` entity contains
-relations to one or more [`ProductVariantPrice`](/docs/reference/typescript-api/entities/product-variant-price) entities and
-one or more [`StockLevel`](/docs/reference/typescript-api/entities/stock-level) entities.
+relations to one or more `ProductVariantPrice` entities and
+one or more `StockLevel` entities.
 
 
 
 ## Facets
 
-[`Facets`](/docs/reference/typescript-api/entities/facet) are used to add structured labels to products and variants. A facet has
-one or more [`FacetValues`](/docs/reference/typescript-api/entities/facet-value). Facet values can be assigned to products or
+`Facets` are used to add structured labels to products and variants. A facet has
+one or more `FacetValues`. Facet values can be assigned to products or
 product variants.
 
 For example, a "Brand" facet could be used to label products with the brand name, with each facet value representing a different brand. You can
