--- a/apps/docs/content/docs/guides/storefront/product-detail.mdx
+++ b/apps/docs/content/docs/guides/storefront/product-detail.mdx
@@ -156,7 +156,7 @@ which makes use of the browser's `Intl` API to format the price according to the
 
 ## Displaying images
 
-If we are using the [`AssetServerPlugin`](/docs/reference/core-plugins/asset-server-plugin/) to serve our product images (as is the default), then we can take advantage
+If we are using the `AssetServerPlugin` to serve our product images (as is the default), then we can take advantage
 of the dynamic image transformation abilities in order to display the product images in the correct size and in
 and optimized format such as WebP.
 
@@ -190,7 +190,7 @@ export function VendureAsset({ preview, preset, alt }: VendureAssetProps) {
 
 ## Adding to the order
 
-To add a particular product variant to the order, we need to call the [`addItemToOrder`](/docs/reference/graphql-api/shop/mutations#additemtoorder) mutation.
+To add a particular product variant to the order, we need to call the `addItemToOrder` mutation.
 This mutation takes the `productVariantId` and the `quantity` as arguments.
 
 <Tabs items={['Mutation', 'Variables', 'Response']}>
